--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -1009,6 +1009,8 @@ without jitter.
 \section{Conclusion}
 The conclusion goes here.
 
+TODO note that $\mathbb P = \mathbb N \times \mathbb N \times \mathbb A$
+with the lexicographic order.
 
 
 
